@@ -1,14 +1,20 @@
-package com.swd392.skincare_products_sales_system.service.impl;
+    package com.swd392.skincare_products_sales_system.service.impl;
 
 import com.swd392.skincare_products_sales_system.dto.request.quiz.*;
+import com.swd392.skincare_products_sales_system.dto.response.AnswerResponse;
+import com.swd392.skincare_products_sales_system.dto.response.QuestionResponse;
 import com.swd392.skincare_products_sales_system.dto.response.QuizResponse;
 import com.swd392.skincare_products_sales_system.dto.response.ResultResponse;
+import com.swd392.skincare_products_sales_system.entity.user.User;
 import com.swd392.skincare_products_sales_system.enums.ErrorCode;
 import com.swd392.skincare_products_sales_system.enums.SkinType;
 import com.swd392.skincare_products_sales_system.enums.Status;
 import com.swd392.skincare_products_sales_system.exception.AppException;
 import com.swd392.skincare_products_sales_system.entity.*;
-import com.swd392.skincare_products_sales_system.entity.user.User;
+import com.swd392.skincare_products_sales_system.entity.quiz.Answer;
+import com.swd392.skincare_products_sales_system.entity.quiz.Question;
+import com.swd392.skincare_products_sales_system.entity.quiz.Quiz;
+import com.swd392.skincare_products_sales_system.entity.quiz.Result;
 import com.swd392.skincare_products_sales_system.repository.*;
 import com.swd392.skincare_products_sales_system.service.QuizService;
 import lombok.AccessLevel;
@@ -55,6 +61,7 @@ public class QuizServiceImpl implements QuizService {
                     .title(questionRequest.getTitle())
                     .quiz(quiz)
                     .build();
+            question.setIsDeleted(false);
             questionRepository.save(question);
 
             for (AnswerRequest answerRequest : questionRequest.getAnswers()) {
@@ -63,6 +70,7 @@ public class QuizServiceImpl implements QuizService {
                         .skinType(answerRequest.getSkinType())
                         .question(question)
                         .build();
+                answer.setIsDeleted(false);
                 answerRepository.save(answer);
             }
         }
@@ -108,11 +116,13 @@ public class QuizServiceImpl implements QuizService {
                 throw new AppException(ErrorCode.TITLE_EXISTED);
             }
         }
+
         quiz.setTitle(quizUpdateRequest.getTitle());
         quiz.setStatus(quizUpdateRequest.getStatus());
         quiz.setDescription(quizUpdateRequest.getDescription());
         quiz.setIsDeleted(false);
         quizRepository.save(quiz);
+
         for (QuestionRequest questionRequest : quizUpdateRequest.getQuestions()) {
             Question question = questionRepository.findById(questionRequest.getQuestionId())
                     .orElseThrow(() -> new AppException(ErrorCode.QUESTION_NOT_FOUND));
@@ -131,24 +141,62 @@ public class QuizServiceImpl implements QuizService {
             }
         }
 
+        // Tạo danh sách QuestionResponse từ Quiz đã cập nhật
+        List<QuestionResponse> questionResponses = quiz.getQuestions().stream()
+                .map(question -> {
+                    List<AnswerResponse> answerResponses = question.getAnswers().stream()
+                            .map(answer -> AnswerResponse.builder()
+                                    .answerId(answer.getId())
+                                    .answerText(answer.getAnswerText())
+                                    .build())
+                            .collect(Collectors.toList());
+
+                    return QuestionResponse.builder()
+                            .questionId(question.getId())
+                            .title(question.getTitle())
+                            .answers(answerResponses)
+                            .build();
+                })
+                .collect(Collectors.toList());
+
+        // Trả về QuizResponse với đầy đủ thông tin
         return QuizResponse.builder()
                 .id(quiz.getId())
                 .title(quiz.getTitle())
                 .description(quiz.getDescription())
                 .status(quiz.getStatus())
+                .question(questionResponses)
                 .build();
     }
 
     @Override
     public QuizResponse getQuizById(long quizId) {
-        Quiz quiz = quizRepository.findSkincareServiceByIdAndIsDeletedIsFalse(quizId).orElseThrow(
-                () -> new AppException(ErrorCode.QUIZ_NOT_EXISTED)
-        );
+        Quiz quiz = quizRepository.findSkincareServiceByIdAndIsDeletedIsFalse(quizId)
+                .orElseThrow(() -> new AppException(ErrorCode.QUIZ_NOT_EXISTED));
+
+        List<QuestionResponse> questionResponses = quiz.getQuestions().stream()
+                .map(question -> {
+                    List<AnswerResponse> answerResponses = question.getAnswers().stream()
+                            .map(answer -> AnswerResponse.builder()
+                                    .answerId(answer.getId())
+                                    .answerText(answer.getAnswerText())
+                                    .build())
+                            .collect(Collectors.toList());
+
+                    return QuestionResponse.builder()
+                            .questionId(question.getId())
+                            .title(question.getTitle())
+                            .answers(answerResponses)
+                            .build();
+                })
+                .collect(Collectors.toList());
+
         return QuizResponse.builder()
                 .id(quiz.getId())
                 .title(quiz.getTitle())
                 .description(quiz.getDescription())
                 .status(quiz.getStatus())
+                .question(questionResponses)
                 .build();
     }
 
@@ -219,31 +267,58 @@ public class QuizServiceImpl implements QuizService {
 
 
     @Override
-        public List<Quiz> getAllQuiz() {
-            Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-            if (authentication == null || !authentication.isAuthenticated()) {
-                throw new AppException(ErrorCode.UNAUTHENTICATED);
-            }
-            String username = authentication.getName();
-            User user = userRepository.findByUsername(username)
-                    .orElseThrow(() -> new AppException(ErrorCode.UNAUTHENTICATED));
+    public List<QuizResponse> getAllQuiz() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated()) {
+            throw new AppException(ErrorCode.UNAUTHENTICATED);
+        }
+        String username = authentication.getName();
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new AppException(ErrorCode.UNAUTHENTICATED));
 
-            List<Quiz> list;
-            if(user.getRole().getId() == 2 || user.getRole().getId() ==  6) {
-                 list = quizRepository.findAll()
-                         .stream()
-                         .toList();
-            }else{
-                 list = quizRepository.findAll()
-                         .stream()
-                         .filter(quiz -> !quiz.getIsDeleted()
-                                    && quiz.getStatus() == Status.ACTIVE)
-                         .collect(Collectors.toList());
-            }
-            return list;
+        List<Quiz> quizzes;
+        if (user.getRole().getId() == 2 || user.getRole().getId() == 6) {
+            quizzes = quizRepository.findAll()
+                    .stream()
+                    .toList();
+        } else {
+            quizzes = quizRepository.findAll()
+                    .stream()
+                    .filter(quiz -> !quiz.getIsDeleted() && quiz.getStatus() == Status.ACTIVE)
+                    .collect(Collectors.toList());
         }
 
+        return quizzes.stream()
+                .map(this::convertToQuizResponse)
+                .collect(Collectors.toList());
+    }
 
+    private QuizResponse convertToQuizResponse(Quiz quiz) {
+        List<QuestionResponse> questionResponses = quiz.getQuestions().stream()
+                .map(question -> {
+                    List<AnswerResponse> answerResponses = question.getAnswers().stream()
+                            .map(answer -> AnswerResponse.builder()
+                                    .answerId(answer.getId())
+                                    .answerText(answer.getAnswerText())
+                                    .build())
+                            .collect(Collectors.toList());
+
+                    return QuestionResponse.builder()
+                            .questionId(question.getId())
+                            .title(question.getTitle())
+                            .answers(answerResponses)
+                            .build();
+                })
+                .collect(Collectors.toList());
+
+        return QuizResponse.builder()
+                .id(quiz.getId())
+                .title(quiz.getTitle())
+                .description(quiz.getDescription())
+                .status(quiz.getStatus())
+                .question(questionResponses)
+                .build();
+    }
 }
 
 
